# XDS110_MCP_server

./: CLAUDE.md  DASHBOARD_SUCCESS.md  Dockerfile.xds110  LINUX_READY.md  PRD.md  PRD_GENERIC.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  SUCCESS_PROCESS_DOCUMENTATION.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start_api_system.sh  test_basic.py  test_knowledge_only.py  test_mcp_server.py
configs/: f28039_config.json  motor_variables.json  xds110_f28039.cfg
docs/: COMPREHENSIVE_REVIEW_GUIDE.md  CONNECTION_PATTERN_ANALYSIS.md  DEVELOPMENT_NOTES.md  EXECUTIVE_BRIEFING.md  README.md  TECHNICAL_DEEP_DIVE.md  UI_ARCHITECTURE.md
docs/architecture/: GENERIC_CCS_COMPATIBILITY_PLAN.md  GENERIC_DEBUGGER_ARCHITECTURE.md
docs/guides/: DEBUGGING_SETUP_GUIDE.md  MACOS_DOCKER_SETUP.md
docs/legacy/: PROJECT_STATUS.md  TESTING_RESULTS.md
legacy_ti_debugger/: TMS320F280039C_LaunchPad.ccxml  motor_control.py  working_memory_motor_control.py
legacy_ti_debugger/Flash_lib_DRV8323RH_3SC/: obake_firmware.out
legacy_ti_debugger/framework/: __init__.py  ti_dss_adapter.py
legacy_ti_debugger/js_scripts/: api_read_variable.js  check_init_state.js  connect_target_v2.js  debug_motor_vars.js  detect_probe.js  find_nonzero_values.js  load_and_debug.js  load_and_read.js  load_run_read.js  monitor_alignment.js  monitor_encoder.js  read_motor_vars_absolute.js  read_motor_vars_v1.js  read_sensors.js  simple_api_read.js  temp_read_variable.js  test_simple_read.js
macos_work/: COMPLETE_SITUATION_NOTES.md  README.md  SOLUTION_MACOS_XDS110.md  XDS110_STATUS.md
macos_work/scripts/: dss_rosetta_wrapper.sh  fix_xds110_mac.sh  setup_usb_docker_mac.sh  setup_usbip_mac.sh
scripts/: docker_xds110_test.py  read_uptime_simple.py  simple_xds110_test.py  xds110_basic_read.py  xds110_host_bridge.py
src/api/: api_web_interface.html  flexible_variable_api.py  mock_variable_api.py  serve_web_interface.py  test_api_client.py
src/examples/: auto_discovered_symbols.js  generic_project_config.yaml  map_analysis_report.json
src/generic/: map_parser_poc.py  xds110_generic_cli.py
src/ui/: README.md  advanced_dashboard.py  api_server.py  api_test_dashboard.py  api_test_report_20250825_222934.json  api_variable_test.py  dash_debug_interface.py  dashboard_callbacks.py  debug_advanced.py  dsp_utilities.py  fast_test_dashboard.py  generic_dsp_dashboard.py  legacy_dash_connector.py  legacy_loop_connector.py  mcp_dash_bridge.py  persistent_dss_session.py  persistent_session_connector.py  run_dashboard.py  run_dashboard_debug.sh  simple_test_dashboard.py  single_session_connector.py  start_api_and_dashboard.py  start_api_server.sh  start_dashboard.sh  start_obake_dashboard.sh  (+8 more)
xds110_mcp_server/: __init__.py  server.py
(+12 files in other folders)
